fix(mobile): fix tools maps position on mobile

--- a/src/demo-app/app/app.component.styl
+++ b/src/demo-app/app/app.component.styl
@@ -7,10 +7,6 @@
   height: 300px;
 }
 
-igo-zoom >>> button {
-  background-color: #fff;
-}
-
 md-sidenav {
   with: 100px;
 }
